--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   font-size: 60px;
   color: #8B0000;
   text-align: center;
-  font-family: fantasy;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;  
   font-style: italic;
   line-height: 50px;
 
