Created eateri responsive display, changed out Movieglu api key.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     font-size: 16px;
     line-height: 150%;
     color: #333;
-    background: #FDF5E6;
+    background: rgb(206, 206, 206)
   }
   
   header {
