--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 body {
     padding: 0;
     margin: 0;
@@ -8,25 +7,30 @@ body {
     color: #333;
     background: rgb(206, 206, 206)
   }
-  
   header {
     background: rgb(206, 206, 206);
   }
-
-
 .movieheader {
   padding: 30px 0px;
   margin: 0;
   font-size: 75px;
   color:#c53030;
   text-align: center;
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;  
-  
-  line-height: 50px;
-
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif ;
+  line-height: 100px;
 }
-
 .buttonTable {
  padding-left: 15px;
-
+}
+.movieSelect{
+  font-size: 25px;
+  color: #C53030;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  line-height: 30px;
+}
+.eatSelect{
+  font-size: 25px;
+  color: #C53030;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  line-height: 30px;
 }
